sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
 typedef uint64_t SimulationTime;
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT EntityID ERS_SubModel_Entity_Create(void* subModelPtr);
    ERS_IMPORT EntityID ERS_SubModel_Entity_Create_Name(void* subModelHandle, const char* entityName);
    ERS_IMPORT EntityID ERS_SubModel_FindEntity(void* submodelInstance, const char* entityName);
    ERS_IMPORT EntityID ERS_SubModel_FindEntity_Parent(void* subModelInstance, const char* entityName, EntityID root);
    ERS_IMPORT bool ERS_SubModel_Entity_Destroy(void* subModel, EntityID entity);
    ERS_IMPORT bool ERS_SubModel_Entity_Exists(const void* submodel, EntityID entityId);
    ERS_IMPORT void ERS_SubModel_Entity_Relation_Update_Parent(void* subModelHandle, EntityID entityId, EntityID parentId);
    ERS_IMPORT void ERS_SubModel_AddScriptBehavior(void* subModelHandle, EntityID entityID, uint32_t componentID, void* managedHandle);
    ERS_IMPORT void* ERS_SubModel_GetScriptBehavior(void* subModelHandle, EntityID entityID, uint32_t componentID);
    ERS_IMPORT void* ERS_SubModel_RemoveScriptBehavior(void* subModelHandle, EntityID entity, uint32_t componentID);
    ERS_IMPORT void* ERS_SubModel_GetComponent(void* subModelHandle, EntityID entity, uint32_t componentID);
    ERS_IMPORT void* ERS_SubModel_AddDataComponent(void* subModelHandle, EntityID entity, uint32_t componentID);
    ERS_IMPORT void* ERS_SubModel_GetSimulator(void* subModelHandle);
    ERS_IMPORT void ERS_SubModel_RemoveDataComponent(void* subModelHandle, EntityID entity, uint32_t componentID);
    ERS_IMPORT bool ERS_SubModel_HasComponent(const void* subModelHandle, EntityID entity, uint32_t componentID);
    ERS_IMPORT void* ERS_SubModel_GetRandomProperties(void* subModelHandle);
    ERS_IMPORT EntityID ERS_SubModel_SendEntityTo(void* subModelInstance, int32_t toSimulator, EntityID entity);
    ERS_IMPORT EntityID ERS_SubModel_ReceiveEntityFrom(void* subModelInstance, int32_t fromSimulator, EntityID pipeEntity);
    ERS_IMPORT EntityID ERS_SubModel_RootEntityID(const void* subModelHandle);
    ERS_IMPORT double ERS_SubModel_GenerateRandomDouble(void* subModelHandle, double min, double max);
    ERS_IMPORT uint64_t ERS_SubModel_GetModelPrecision(void* subModelInstance);
    ERS_IMPORT uint32_t ERS_SubModel_RegisterSubModelContext();
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));
    ERS_IMPORT void* ERS_SubModel_GetContext(void* subModelHandle, uint32_t SubModelContextTypeIdx);
    ERS_IMPORT void* ERS_SubModelRandomProperties_Create();
    ERS_IMPORT void ERS_SubModelRandomProperties_Destroy(void* properties);
    ERS_IMPORT void ERS_SubModelRandomProperties_SetRandomGenerator_Type(void* submodel, int randomNumberGeneratorType);
    ERS_IMPORT void ERS_SubModelRandomProperties_SetRepetitive(void* submodel, bool value);
    ERS_IMPORT void ERS_SubModelRandomProperties_SetAntithetical(void* submodel, bool value);
    ERS_IMPORT void ERS_SubModelRandomProperties_SetSeed(void* submodel, size_t seed);
    ERS_IMPORT bool ERS_SubModelRandomProperties_IsRepetitive(void* submodel);
    ERS_IMPORT bool ERS_SubModelRandomProperties_IsAntithetical(void* submodel);
    ERS_IMPORT const size_t ERS_SubModelRandomProperties_GetOriginalSeed(const void* submodel);
    ERS_IMPORT void* ERS_SubModelRandomProperties_GetRandomNumberGenerator(void* submodel);
    ERS_IMPORT void* ERS_TypeInfo_RegisterStruct(const char* name);
    ERS_IMPORT void ERS_TypeInfo_AddField(void* componentTypeInfoPtr, const char* name, uint32_t fieldType, size_t offset, bool readOnly);
    ERS_IMPORT const char* ERS_TypeInfo_GetName(void* componentTypeInfoPtr);
    ERS_IMPORT void* ERS_Submodel_View_Create(void* subModelHandle, uint32_t* includedTypeIdArray_, uint32_t includedTypeArraySize, uint32_t* excludedTypeIdArray_, uint32_t excludedTypeArraySize);
    ERS_IMPORT bool ERS_Submodel_View_Next(void* viewHandle);
    ERS_IMPORT void* ERS_Submodel_View_GetComponent(void* viewHandle, size_t typeIndex);
    ERS_IMPORT void** ERS_Submodel_View_GetComponents(void* viewHandle);
    ERS_IMPORT EntityID ERS_Submodel_View_GetEntity(void* viewHandle);
    ERS_IMPORT void ERS_Submodel_View_Destroy(void* view);
    ERS_IMPORT uint32_t ERS_SyncEvent_GetSyncEventUID(void* syncEvent);
    ERS_IMPORT void* ERS_SyncEvent_GetData(void* syncEvent);
    ERS_IMPORT void ERS_CollisionSystem_UpdateBoundingBoxes(void* subModelInstance);
    ERS_IMPORT void ERS_PathAnimationSystem_Update(SimulationTime currentTime);
    ERS_IMPORT void ERS_PathAnimationSystem_Animate(EntityID toAnimate, SimulationTime startTime, SimulationTime endTime, float fromValue, float toValue, EntityID entityContainingPath, int pathIndex);
    ERS_IMPORT void ERS_PathAnimationSystem_AnimateStraightPath(EntityID toAnimate, SimulationTime startTime, SimulationTime endTime, float fromX, float fromY, float fromZ, float toX, float toY, float toZ);
    ERS_IMPORT void ERS_RenderSystem_Render2D(void* subModelInstance, void* renderContextInstance);
    ERS_IMPORT void ERS_RenderSystem_Render3D(void* subModelInstance, void* renderContextInstance);
    ERS_IMPORT void ERS_TransformSystem_UpdateGlobals(void* subModelInstance);
    ERS_IMPORT void ERS_ImGui_StyleColorsErsDark();
    ERS_IMPORT void ERS_ImGui_StyleColorsErsLight();
    ERS_IMPORT bool ERS_ImGui_SwitchButton(const char* label, bool* value, int flags);
    ERS_IMPORT bool ERS_ImGui_DragVectorXYZ(const char* label, float* x, float* y, float* z, int flags);
    ERS_IMPORT void* ERS_Window_Create();
    ERS_IMPORT void* ERS_Window_Create_Title(const char* title);
    ERS_IMPORT void ERS_Window_Destroy(void* ptr);
    ERS_IMPORT void ERS_Window_BeginFrame(void* ptr);