sources/CSharp/src/ErsApiFunctions.cs


        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_SubModel_Entity_Create(IntPtr subModelPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe Entity ERS_SubModel_Entity_Create_Name(IntPtr subModelHandle, /* ASCII String */ byte* entityName);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe Entity ERS_SubModel_FindEntity(IntPtr submodelInstance, /* ASCII String */ byte* entityName);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe Entity ERS_SubModel_FindEntity_Parent(IntPtr subModelInstance, /* ASCII String */ byte* entityName, Entity root);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SubModel_Entity_Destroy(IntPtr subModel, Entity entity);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SubModel_Entity_Exists(IntPtr submodel, Entity entityId);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModel_Entity_Relation_Update_Parent(IntPtr subModelHandle, Entity entityId, Entity parentId);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModel_AddScriptBehavior(IntPtr subModelHandle, Entity entityID, UInt32 componentID, IntPtr managedHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_GetScriptBehavior(IntPtr subModelHandle, Entity entityID, UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_RemoveScriptBehavior(IntPtr subModelHandle, Entity entity, UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_GetComponent(IntPtr subModelHandle, Entity entity, UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_AddDataComponent(IntPtr subModelHandle, Entity entity, UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_GetSimulator(IntPtr subModelHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModel_RemoveDataComponent(IntPtr subModelHandle, Entity entity, UInt32 componentID);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SubModel_HasComponent(IntPtr subModelHandle, Entity entity, UInt32 componentID);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_GetRandomProperties(IntPtr subModelHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_SubModel_SendEntityTo(IntPtr subModelInstance, Int32 toSimulator, Entity entity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_SubModel_ReceiveEntityFrom(IntPtr subModelInstance, Int32 fromSimulator, Entity pipeEntity);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_SubModel_RootEntityID(IntPtr subModelHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern double ERS_SubModel_GenerateRandomDouble(IntPtr subModelHandle, double min, double max);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 ERS_SubModel_GetModelPrecision(IntPtr subModelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_SubModel_RegisterSubModelContext();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_SubModel_AddSubModelContext(IntPtr subModelHandle, UInt32 SubModelContextTypeIdx, /* ASCII String */ byte* name, IntPtr SubModelContextPtr, delegate* unmanaged[Cdecl]<IntPtr, void> destructor);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModel_GetContext(IntPtr subModelHandle, UInt32 SubModelContextTypeIdx);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModelRandomProperties_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModelRandomProperties_Destroy(IntPtr properties);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModelRandomProperties_SetRandomGenerator_Type(IntPtr submodel, int randomNumberGeneratorType);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModelRandomProperties_SetRepetitive(IntPtr submodel, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModelRandomProperties_SetAntithetical(IntPtr submodel, [MarshalAs(UnmanagedType.I1)] bool value);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_SubModelRandomProperties_SetSeed(IntPtr submodel, nuint seed);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SubModelRandomProperties_IsRepetitive(IntPtr submodel);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_SubModelRandomProperties_IsAntithetical(IntPtr submodel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint ERS_SubModelRandomProperties_GetOriginalSeed(IntPtr submodel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SubModelRandomProperties_GetRandomNumberGenerator(IntPtr submodel);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_TypeInfo_RegisterStruct(/* ASCII String */ byte* name);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void ERS_TypeInfo_AddField(IntPtr componentTypeInfoPtr, /* ASCII String */ byte* name, UInt32 fieldType, nuint offset, [MarshalAs(UnmanagedType.I1)] bool readOnly);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_TypeInfo_GetName(IntPtr componentTypeInfoPtr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Submodel_View_Create(IntPtr subModelHandle, IntPtr includedTypeIdArray_, UInt32 includedTypeArraySize, IntPtr excludedTypeIdArray_, UInt32 excludedTypeArraySize);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ERS_Submodel_View_Next(IntPtr viewHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Submodel_View_GetComponent(IntPtr viewHandle, nuint typeIndex);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern ref IntPtr ERS_Submodel_View_GetComponents(IntPtr viewHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern Entity ERS_Submodel_View_GetEntity(IntPtr viewHandle);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Submodel_View_Destroy(IntPtr view);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 ERS_SyncEvent_GetSyncEventUID(IntPtr syncEvent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_SyncEvent_GetData(IntPtr syncEvent);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_CollisionSystem_UpdateBoundingBoxes(IntPtr subModelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathAnimationSystem_Update(SimulationTime currentTime);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathAnimationSystem_Animate(Entity toAnimate, SimulationTime startTime, SimulationTime endTime, float fromValue, float toValue, Entity entityContainingPath, int pathIndex);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_PathAnimationSystem_AnimateStraightPath(Entity toAnimate, SimulationTime startTime, SimulationTime endTime, float fromX, float fromY, float fromZ, float toX, float toY, float toZ);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderSystem_Render2D(IntPtr subModelInstance, IntPtr renderContextInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_RenderSystem_Render3D(IntPtr subModelInstance, IntPtr renderContextInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_TransformSystem_UpdateGlobals(IntPtr subModelInstance);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ImGui_StyleColorsErsDark();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_ImGui_StyleColorsErsLight();

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_ImGui_SwitchButton(/* ASCII String */ byte* label, bool* value, int flags);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe bool ERS_ImGui_DragVectorXYZ(/* ASCII String */ byte* label, IntPtr x, IntPtr y, IntPtr z, int flags);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ERS_Window_Create();

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe IntPtr ERS_Window_Create_Title(/* ASCII String */ byte* title);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Window_Destroy(IntPtr ptr);

        [DllImport("ers-engine", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ERS_Window_BeginFrame(IntPtr ptr);
